src/styles/header.css
header {
  position: relative;
  display: block;
  width: 100%;
  --text-border-radius: 0.8em;
}

#header-logo-img {
  /* Position */
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-height: 180px;
  max-width: calc(100% - 20px); /* otherwise, extends past viewport when narrow (mobile) */
  padding-top: 5px;
  margin-bottom: -8px;

  /* Appearance - Glow */
  --header-title-img-glow: drop-shadow(0 0 30px rgb(47, 0, 80)) drop-shadow(0 0 50px black)
    drop-shadow(0 0 30px black);
  -webkit-filter: var(--header-title-img-glow);
  filter: var(--header-title-img-glow);
}

#buttons {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  gap: 10px;
  padding-top: 0.7em;
}

#buttons .button {
  background-color: black;
  border-radius: 0.5em;
  border-width: 2px;
  border-style: solid;
  padding: 0.5em;
  width: 9em;
}

#buttons .text-back {
  --shadow-color: rgb(47, 0, 80);
  box-shadow:
    0 0 5px black,
    0 0 5px var(--shadow-color),
    0 0 10px var(--shadow-color),
    0 0 10px var(--shadow-color),
    0 0 10px var(--shadow-color),
    0 0 10px var(--shadow-color),
    0 0 15px var(--shadow-color),
    0 0 30px var(--shadow-color),
    0 0 50px var(--shadow-color);
}

#buttons .button:hover {
  box-shadow: 0 0 40px yellow;
  border-color: yellow !important;
}

#buttons .button#designed {
  border-color: cyan;
  color: cyan;
}

#buttons .button#custom {
  border-color: orange;
  color: orange;
}

#header-right {
  /* Position */
  position: absolute;
  right: 100px;
  bottom: 0px;

  /* Appearance */
  text-align: right;
}

#header-right span {
  display: flex;
  justify-content: center;
  align-items: center;
}

#header-right #connect {
  /* Position */
  display: inline-block;
  margin-bottom: 0.3em;

  /* Appearance */
  color: Aquamarine;
  font-style: italic;
}

#header-right #connect .text-back {
  --shadow-size-1: 0.8em;
  --shadow-color-1: rgb(47, 0, 80);
  --shadow-size-2: 1em;
  --shadow-color-2: black;
  text-shadow:
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-2) var(--shadow-color-2),
    0 0 var(--shadow-size-2) var(--shadow-color-2),
    0 0 var(--shadow-size-2) var(--shadow-color-2),
    0 0 var(--shadow-size-2) var(--shadow-color-2),
    0 0 var(--shadow-size-2) var(--shadow-color-2);
}

#social-links-wrapper {
  justify-content: center;
  align-items: center;
  text-align: center;
}

#social-links {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 2px;
}

#social-links .circle {
  /* Potition (Centered) */
  --circle-size: 3em;
  height: var(--circle-size);
  width: var(--circle-size);

  /* Appearance */
  border: 5px solid black;
  box-shadow: 0 0 30px black;
  transition: 0.1s;
}

#social-links .circle svg {
  font-size: 2em;
}

#social-links .circle:hover {
  box-shadow: 0 0 40px yellow;
}

#social-links .circle:hover svg {
  font-size: 2.2em;
}

#bio {
  /* Position */
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-top: 0.5em;
  margin-bottom: 0.5em;

  /* Appearance */
  color: lime;
  font-family: 'Outfit', sans-serif;
  font-size: 1.2em;
}

#bio p {
  &:not(:last-child) {
    margin-bottom: 0.2em;
  }
}

#bio .text-back {
  --shadow-size-1: 0.8em;
  --shadow-color-1: rgb(47, 0, 80);
  --shadow-size-2: 1em;
  --shadow-color-2: black;
  text-shadow:
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-1) var(--shadow-color-1),
    0 0 var(--shadow-size-2) var(--shadow-color-2),
    0 0 var(--shadow-size-2) var(--shadow-color-2),
    0 0 var(--shadow-size-2) var(--shadow-color-2),
    0 0 var(--shadow-size-2) var(--shadow-color-2),
    0 0 var(--shadow-size-2) var(--shadow-color-2);
}

@media (max-width: 1500px) {
  #header-right {
    /* Position */
    position: relative;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 0.8em;
    right: auto;
    line-height: 1em;

    /* Appearance */
    text-align: center;
  }

  #header-right #connect {
    /* Position */
    position: absolute;
    left: 50%;
    max-width: 4em;
    text-align: right;
    margin: 0;

    /* Appearance */
    color: Aquamarine;
    font-style: italic;
    transform: translateX(-10.1em) translateY(0.75em);
  }

  #header-logo-img {
    max-width: calc(85%);
  }
}

